Networkable/force-app/main/default/objects/Community_Network__c/Community_Network__c.object-meta.xml
<CustomObject>
    <label>Community Network</label>
    <nameField>
        <displayFormat>ONR-{000000000}</displayFormat>
        <label>Opportunity Network Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Networks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>