Networkable/force-app/main/default/objects/Community_Network__c/fields/Community_Account__c.field-meta.xml
<CustomField>
    <fullName>Community_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Networks (Community Account)</relationshipLabel>
    <relationshipName>Community_Networks1</relationshipName>
    <type>Lookup</type>
</CustomField>