Networkable/force-app/main/default/objects/Community_Network__c/fields/Community_Role__c.field-meta.xml
<CustomField>
    <fullName>Community_Role__c</fullName>
    <label>Community Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>