Networkable/force-app/main/default/objects/Community_Network__c/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <formula>Text(Opportunity__r.Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <type>Text</type>
</CustomField>