Networkable/force-app/main/default/objects/Community_Network__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Networks</relationshipLabel>
    <relationshipName>Community_Networks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>