Networkable/force-app/main/default/objects/Community_Network__c/fields/Primary_Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Role__c</fullName>
    <label>Primary Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Project manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>