Networkable/force-app/main/default/objects/Community_Network__c/fields/Primary_Account_Role_Influence_Weight__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Role_Influence_Weight__c</fullName>
    <label>Primary Account Role Influence Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>