Networkable/force-app/main/default/objects/Community_Network__c/fields/Winning_Specifier__c.field-meta.xml
<CustomField>
    <fullName>Winning_Specifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Specifier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Networks (Winning Specifier)</relationshipLabel>
    <relationshipName>Community_Networks2</relationshipName>
    <type>Lookup</type>
</CustomField>